[package]
name = "OPV"
version = "0.1.0"
authors = ["teovoinea <voinea.teodor@gmail.com>"]

[dependencies]
image = "0.15"
camera_capture = "0.4.0"
piston_window = "0.70.0"
piston-texture = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"
lazy_static = "1.3"
portaudio = "0.7.0"
stun = "0.0.2"
clap = "2.33.0"
pnet = "0.22.0"